# mips-interpreter

./: .gitignore  CMakeLists.txt  README.md  report_alessio_piroli_mips.md
corrected_inputs_outputs/asms/: instructions-fixed.asm  loop-fixed.asm  registers_are_zero-fixed.asm
corrected_inputs_outputs/outs/: instructions-fixed.txt  registers_are_zero-fixed.txt
src/: CMakeLists.txt
src/mips-assemble/: assemble-main.cpp
src/mips-core/: assembler.cpp  assembler.hpp  instruction.cpp  instruction.hpp  interpreter.cpp  interpreter.hpp  machine_state.cpp  machine_state.hpp
src/mips-debugger/: CMakeLists.txt  debugger.cpp  debugger.hpp  mips-debugger.cpp
src/mips-execute/: execute-main.cpp  main.cpp
src/mips-interpret/: interpret-main.cpp  main.cpp
tests/: CMakeLists.txt
tests/arith_logic_imm/: test_arith_logic_imm.cpp
tests/div_mult/: div_mult_test.cpp
tests/jump/: jump_test.cpp
tests/jump_reg/: jump_reg_test.cpp
tests/load_imm/: load_imm_test.cpp
tests/load_store/: load_store_test.cpp
tests/move_to/: move_to_test.cpp
tests/shift/: shift_test.cpp
tests/shift_reg/: shift_reg_test.cpp
tests_assembler/: CMakeLists.txt
tests_assembler/arith_logic/: arith_logic_test.cpp
tests_assembler/arith_logic_imm/: arith_logic_imm_test.cpp
tests_assembler/branch/: branch_test.cpp
tests_assembler/branch_zero/: branch_zero_test.cpp
tests_assembler/div_mult/: div_mult_test.cpp
tests_assembler/jump/: jump_test.cpp
tests_assembler/jump_reg/: jump_reg_test.cpp
tests_assembler/load_imm/: load_imm_test.cpp
tests_assembler/load_store/: load_store_test.cpp
tests_assembler/move_from/: move_from_test.cpp
tests_assembler/move_to/: move_to_test.cpp
tests_assembler/shift/: shift_test.cpp
tests_assembler/shift_reg/: shift_reg_test.cpp
tests_assembler/trap/: trap_test.cpp
tests_corrected/asms/: loop-fixed.asm  registers_are_zero-fixed.asm
tests_corrected/outs/: instructions-fixed.txt  loop-fixed.txt  registers_are_zero-fixed.txt
tests_interpreter/: CMakeLists.txt
tests_interpreter/arith_logic/: test_arith_logic.cpp
tests_interpreter/arith_logic_imm/: test_arith_logic_imm.cpp
tests_interpreter/branch/: branch_test.cpp
tests_interpreter/branch_zero/: branch_zero_test.cpp
tests_interpreter/jump/: jump_test.cpp
tests_interpreter/jump_reg/: jump_reg_test.cpp
tests_interpreter/move_from/: move_from_test.cpp
tests_official/asms/: registers_are_zero.asm
tests_official/outs/: instructions.txt
